syntax = "proto3";

option go_package="./;pb";

message ImageChunk {
    bytes content = 1;
    int32 currentSecuence = 2;
    int32 lastSecuence = 3;
    int64 secuenceSize = 4;
    string filename = 5;
}
